rust/orkester-core/logs.txt
   Compiling orkester-plugin v0.1.0 (/orkester/rust/orkester-core/crates/orkester-plugin)
warning: unused macro definition: `export_plugin`
 --> crates/orkester-plugin/src/macros.rs:1:14
  |
1 | macro_rules! export_plugin {
  |              ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_macros)]` (part of `#[warn(unused)]`) on by default

warning: associated function `from_abi` is never used
  --> crates/orkester-plugin/src/sdk/message.rs:48:26
   |
13 | impl<'a> Message<'a> {
   | -------------------- associated function in this implementation
...
48 |     pub(crate) unsafe fn from_abi(raw: AbiMessage) -> Result<Self> {
   |                          ^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: method `into_abi` is never used
  --> crates/orkester-plugin/src/sdk/owned_message.rs:69:19
   |
13 | impl OwnedMessage {
   | ----------------- method in this implementation
...
69 |     pub(crate) fn into_abi(mut self) -> AbiOwnedMessage {
   |                   ^^^^^^^^

warning: struct `Runtime` is never constructed
  --> crates/orkester-plugin/src/sdk/runtime.rs:10:19
   |
10 | pub(crate) struct Runtime<P: Plugin> {
   |                   ^^^^^^^

warning: struct `ComponentBox` is never constructed
  --> crates/orkester-plugin/src/sdk/runtime.rs:15:19
   |
15 | pub(crate) struct ComponentBox {
   |                   ^^^^^^^^^^^^

warning: function `runtime_cell` is never used
  --> crates/orkester-plugin/src/sdk/runtime.rs:19:4
   |
19 | fn runtime_cell() -> &'static AtomicPtr<c_void> {
   |    ^^^^^^^^^^^^

warning: function `set_plugin_runtime` is never used
  --> crates/orkester-plugin/src/sdk/runtime.rs:24:15
   |
24 | pub(crate) fn set_plugin_runtime<P: Plugin>(ptr: *mut c_void) {
   |               ^^^^^^^^^^^^^^^^^^

warning: function `get_plugin_runtime` is never used
  --> crates/orkester-plugin/src/sdk/runtime.rs:29:4
   |
29 | fn get_plugin_runtime<P: Plugin>() -> *mut c_void {
   |    ^^^^^^^^^^^^^^^^^^

warning: function `plugin_create_root` is never used
  --> crates/orkester-plugin/src/sdk/runtime.rs:34:22
   |
34 | pub(crate) unsafe fn plugin_create_root<P: Plugin>(host: *const AbiHostApi) -> Result<*mut c_void> {
   |                      ^^^^^^^^^^^^^^^^^^

warning: function `write_output` is never used
  --> crates/orkester-plugin/src/sdk/runtime.rs:41:15
   |
41 | pub(crate) fn write_output(out: *mut AbiOwnedMessage, message: OwnedMessage) -> AbiResultCode {
   |               ^^^^^^^^^^^^

warning: function `protect` is never used
  --> crates/orkester-plugin/src/sdk/runtime.rs:53:15
   |
53 | pub(crate) fn protect<F>(f: F) -> AbiResultCode
   |               ^^^^^^^

warning: function `plugin_call` is never used
  --> crates/orkester-plugin/src/sdk/runtime.rs:63:33
   |
63 | pub(crate) unsafe extern "C" fn plugin_call<P: Plugin>(
   |                                 ^^^^^^^^^^^

warning: function `plugin_free` is never used
  --> crates/orkester-plugin/src/sdk/runtime.rs:99:33
   |
99 | pub(crate) unsafe extern "C" fn plugin_free(msg: *mut AbiOwnedMessage) {
   |                                 ^^^^^^^^^^^

warning: function `create_component_box` is never used
   --> crates/orkester-plugin/src/sdk/runtime.rs:112:15
    |
112 | pub(crate) fn create_component_box(component: Box<dyn Component>) -> OwnedMessage {
    |               ^^^^^^^^^^^^^^^^^^^^

warning: trait `Sealed` is never used
 --> crates/orkester-plugin/src/private.rs:8:11
  |
8 | pub trait Sealed {}
  |           ^^^^^^

warning: function `init_plugin_runtime` is never used
  --> crates/orkester-plugin/src/private.rs:10:8
   |
10 | pub fn init_plugin_runtime<P: Plugin>(host: *const AbiHostApi) -> Result<*mut c_void> {
   |        ^^^^^^^^^^^^^^^^^^^

warning: function `store_plugin_runtime` is never used
  --> crates/orkester-plugin/src/private.rs:14:8
   |
14 | pub fn store_plugin_runtime<P: Plugin>(ptr: *mut c_void) {
   |        ^^^^^^^^^^^^^^^^^^^^

warning: function `dispatch_plugin_call` is never used
  --> crates/orkester-plugin/src/private.rs:18:15
   |
18 | pub unsafe fn dispatch_plugin_call<P: Plugin>(
   |               ^^^^^^^^^^^^^^^^^^^^

warning: function `dispatch_plugin_free` is never used
  --> crates/orkester-plugin/src/private.rs:26:15
   |
26 | pub unsafe fn dispatch_plugin_free(msg: *mut AbiOwnedMessage) {
   |               ^^^^^^^^^^^^^^^^^^^^

warning: `orkester-plugin` (lib) generated 19 warnings
   Compiling orkester-plugin-test v0.1.0 (/orkester/rust/orkester-core/crates/orkester-plugin-test)
   Compiling orkester v0.1.0 (/orkester/rust/orkester-core/crates/orkester)
error[E0432]: unresolved imports `orkester_plugin::Plugin`, `orkester_plugin::Component`, `orkester_plugin::Host`, `orkester_plugin::PluginError`, `orkester_plugin::Message`, `orkester_plugin::OwnedMessage`
 --> crates/orkester-plugin-test/src/lib.rs:1:23
  |
1 | use orkester_plugin::{Plugin, Component, Host, PluginError, Message, OwnedMessage};
  |                       ^^^^^^  ^^^^^^^^^  ^^^^  ^^^^^^^^^^^  ^^^^^^^  ^^^^^^^^^^^^ no `OwnedMessage` in the root
  |                       |       |          |     |            |
  |                       |       |          |     |            no `Message` in the root
  |                       |       |          |     no `PluginError` in the root
  |                       |       |          no `Host` in the root
  |                       |       no `Component` in the root
  |                       no `Plugin` in the root
  |
  = help: consider importing this trait instead:
          orkester_plugin::sdk::Plugin
  = help: consider importing one of these items instead:
          std::path::Component
          orkester_plugin::sdk::Component
  = help: consider importing this struct instead:
          orkester_plugin::sdk::Host
  = help: consider importing this struct instead:
          orkester_plugin::sdk::Message
  = help: consider importing this struct instead:
          orkester_plugin::sdk::OwnedMessage

For more information about this error, try `rustc --explain E0432`.
error: could not compile `orkester-plugin-test` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
